--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "postcss-modules": "^1.4.1"
   },
   "dependencies": {
-    "@babel/runtime": "^7.4.3"
+    "@babel/runtime": "^7.4.3",
+    "shortid": "^2.2.15"
   }
 }
